Removes MaterialList and add filter capability
I removed also Material List library because it is not good such I thought, in fact now the performance is better.

I add the support for filtering (see #22) but it is not the best way, we should implement it with filterable interface in order to filter in asynchronous way.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,18 @@
     <string name="stored">stored</string>
     <string name="agency_icon_description">Agency icon</string>
 
+    <!-- Article menu -->
+    <string name="search_action">Search</string>
+    <string name="filter_action">Filter</string>
+
+    <string name="fb_posts_filter">Facebook posts</string>
+    <string name="medias_filter">Images</string>
+    <string name="links_filter">Links</string>
+    <string name="pdf_filter">PDF</string>
+    <string name="papers_filter">Papers</string>
+    <string name="movies_filter">Movies</string>
+    <string name="feeds_filter">Articles</string>
+    <string name="tweets_filter">Tweets</string>
+    <string name="all_filter">All</string>
+
 </resources>
