Adds filter menu and order menu with common article list management
Dynamic menu for filtering is now implemented and allow multi selection through checkbox. Order menu instead is implemented through radio buttons. It also adds a common set list of articles in that way different sections could load articles from the same list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
 
     <!-- Article menu -->
     <string name="search_action">Search</string>
+    <string name="sort_action">Sort</string>
     <string name="filter_action">Filter</string>
 
     <string name="fb_posts_filter">Facebook posts</string>
@@ -43,5 +44,9 @@
     <string name="feeds_filter">Articles</string>
     <string name="tweets_filter">Tweets</string>
     <string name="all_filter">All</string>
+    <string name="ascending_order_date">Ascending order</string>
+    <string name="descending_order_date">Descending order</string>
+    <string name="no_order_date">No order</string>
+
 
 </resources>
